--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 	font-optical-sizing: auto;
 	font-weight: 700;
 	font-style: normal;
-	font-size: 22px;
+	font-size: 1.375rem;
 	line-height: 120%;
 	letter-spacing: 0px;
 }
@@ -28,7 +28,7 @@ body {
 	font-optical-sizing: auto;
 	font-weight: 400;
 	font-style: normal;
-	font-size: 15px;
+	font-size: 0.938rem;
 	line-height: 140%;
 	letter-spacing: 0.2px;
 }
